fixed weird cropping

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body {
 }
 
 .year {
-	font-size: 22rem;
+	font-size: 300px;
 	margin: 0;
 	padding: 0 1vw;
 	transform: rotate(-90deg);
